// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    <div
      class="wrapper"
    >
      <div
        class="centered"
      >
        <button
          class="button"
          style="color: rgb(68, 68, 68); border-color: #444;"
        >
          Please X!
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Centered Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    I’m centered
  </div>
</div>
`;

exports[`Storyshots HelloWorld to Storybook 1`] = `
<div
  class="main"
>
  <h1>
    Welcome to STORYBOOK
  </h1>
   
  <p>
    
    This is a UI component dev environment for your app.
  
  </p>
   
  <p>
    
    We've added some basic stories inside the
    
    <br />
     
    <code
      class="code"
    >
      src/stories
    </code>
     
    <br />
     directory.
    
    <br />
     A story is a single state of one or more UI components. You can have as many stories as you want.
    
    <br />
     (Basically a story is like a visual test case.)
  
  </p>
   
  <p>
    
    See these sample
    
    <br />
     
    <a
      class="link"
      role="button"
      tabindex="0"
    >
      stories
    </a>
     
    <br />
     for a component called
    
    <br />
     
    <code
      class="code"
    >
      Button
    </code>
    
    .
  
  </p>
   
  <p>
    
    Just like that, you can add your own components as stories.
    
    <br />
     You can also edit those components and see changes right away.
    
    <br />
     (Try editing the
    
    <code
      class="code"
    >
      Button
    </code>
     component located at
    
    <code
      class="code"
    >
      src/stories/Button.js
    </code>
    .)
  
  </p>
   
  <p>
    
    This is just one thing you can do with Storybook.
    
    <br />
     Have a look at the
    
    <br />
     
    <a
      class="link"
      href="https://github.com/storybooks/storybook"
      rel="noopener noreferrer"
      target="_blank"
    >
      
      Storybook
    
    </a>
     
    <br />
     repo for more information.
  
  </p>
   
  <p
    class="note"
  >
    <b>
      NOTE:
    </b>
     
    <br />
     Have a look at the
    
    <br />
     
    <code
      class="code"
    >
      .storybook/webpack.config.js
    </code>
     
    <br />
     to add webpack loaders and plugins you are using in this project.
  
  </p>
</div>
`;

exports[`Storyshots Input Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    <div
      class="wrapper"
    >
      <div
        class="centered"
      >
        <div
          style="width: 300px;"
        >
          <textarea
            class="input"
            placeholder="Type something here..."
            style="resize: none; overflow: hidden; height: 30px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
